<resources>
    <string name="app_name">Map App</string>
    <string name="ti_layers">Слои</string>
    <string name="ti_backings">Подложки</string>
    <string name="ti_missions">Миссии</string>
    <string name="string_count_of_elements">Эл-ов: %s</string>
    <string name="string_zoom_range">Зум: 16–18</string>
    <string name="string_opacity">Прозрачность: %s%%</string>
    <string name="string_synchronized_at">Синхр.: %s</string>
    <string name="nav_open">Открыть панель</string>
    <string name="nav_close">Закрыть панель</string>
    <string name="string_fab_description">В конец списка</string>
    <string name="content_description_add_item">Add item</string>
    <string name="content_description_find_item">Find Item</string>
    <string name="content_description_delete_item">Delete Item</string>
    <string name="content_description_drag_items">Drag items</string>
    <string name="string_panel_image">Panel Image</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYXptZXRvdiIsImEiOiJjbDFudzF6dm0wMDNpM2RucWV4bGV4aHMxIn0.G2zObFagQIRsnhd_C227kg</string>
</resources>