<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.tabs.TabLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tab_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:background="@color/primaryColor"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:tabMode="fixed"
    app:tabSelectedTextColor="@color/primaryTextColor"
    app:tabTextColor="@color/secondaryTextColor">

    <com.google.android.material.tabs.TabItem

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ti_layers" />

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ti_backings" />

    <com.google.android.material.tabs.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ti_missions" />
</com.google.android.material.tabs.TabLayout>