<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_bottom_panel"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="?colorPrimaryVariant"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <ImageButton
        android:id="@+id/btn_add_item"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@color/secondaryColor"
        android:contentDescription="@string/content_description_add_item"
        android:src="@drawable/add_button_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primaryTextColor" />

    <ImageButton
        android:id="@+id/btn_find_item"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@color/secondaryColor"
        android:contentDescription="@string/content_description_find_item"
        android:src="@drawable/find_button_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_add_item"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@color/secondaryColor"
        android:contentDescription="@string/content_description_delete_item"
        android:src="@drawable/delete_button_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_find_item"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_drag_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:layout_marginEnd="4dp"
        android:background="@color/secondaryColor"
        android:contentDescription="@string/content_description_drag_items"
        android:src="@drawable/drag_button_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sw_panel_bottom"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_panel_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:checked="true"
        android:theme="@style/CustomSwitch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackTint="@color/secondaryTextColor" />


</androidx.constraintlayout.widget.ConstraintLayout>